--- a/chatUI/index.html
+++ b/chatUI/index.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="style/checkbox.css" media="screen">
         <link rel="stylesheet" type="text/css" href="style/main.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="style/emoji.min.css" media="screen">
         <meta charset="utf-8" />
     </head>
     <body>
